--- a/frontend/src/component/styles.css
+++ b/frontend/src/component/styles.css
@@ -33,8 +33,8 @@ body {
   /* Hero Section */
   .hero {
     /* background: url('/images/hero.jpg') center center/cover no-repeat; */
-    color: #fff;
-    padding: 100px 20px;
+    color: #4e4c4c;
+   
     text-align: center;
   }
   
@@ -56,7 +56,11 @@ body {
   .hero button:hover {
     background-color: #333;
   }
-  
+  .front-image {
+    width: 100%; /* Makes the image take full width of the container */
+    height: auto; /* Keeps the aspect ratio */
+    object-fit: cover; /* Ensures that the image fills the container */
+  }
   /* About Us Section */
   .team {
     display: flex;
